tests/profile/error/camera/gotonode_wrongtype_anchor.profile
{
  "version": { "major": 1, "minor": 3 },
  "camera": {
    "type": "goToNode",
    "anchor": 1.0
  }
}
